# sample_api_tests

./: .gitignore  README.md  pyproject.toml  run_test_and_make_report.sh
allure/: categories.json
allure-report/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
allure-report/export/: influxDbData.txt  prometheusData.txt
allure-report/history/: categories-trend.json  duration-trend.json  history.json
allure-report/widgets/: categories.json  duration.json  status-chart.json  summary.json
allure/allure-results/: 05c3648a-c081-41ed-8b85-0b2e4790886d-container.json  26df09db-a990-4cfd-ae21-a8c296e00fca-container.json  2cd0a04f-e7af-4358-a91c-8a61b7987066-result.json  2d9a1a2a-a6a9-4c08-88ee-643be052224b-result.json  3216b229-0bb6-44b0-8c43-db106abb08a5-result.json  37ac5cfd-0f22-4998-8424-87c6846d1db4-result.json  390bd8cd-6716-4bd0-9a96-82718d24a080-container.json  3f7ec1cd-baa4-4a1e-b6e8-7b40aed150a4-result.json  5a08ddc4-966d-48c5-8aba-db4b80847b8a-container.json  6dd80643-fd1c-4f67-935b-a2c734062724-result.json  790bde65-5aa1-49ee-9954-3702843ac0c2-result.json  81cbf1e3-a5d4-423a-a18d-665a5399d27f-result.json  environment.properties  (+14 more)
jenkins/: jenkins_configuration.xml
settings/: settings.py
src/: common_steps.py  preconditions_steps.py
test_scenarios/: test_get_list_of_users.md  test_get_user_by_id.md  test_login_user.md  test_logout_user.md  test_register_user.md
tests/: conftest.py  test_get_list_of_users.py  test_get_user_by_id.py  test_login_user.py  test_logout_user.py  test_register_user.py
(+71 files in other folders)
