[tool.poetry]
name = "sample-api-tests"
version = "0.1.0"
description = ""
authors = ["kpochodyla <kpochodyla@protonmail.com>"]
readme = "README.md"
packages = [{include = "sample_api_tests"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
